[project]
name = "pytvtools-core"
version = "0.1.0"
description = "Pure Python TradingView tools - indicators, watchlists, TVData WebSocket fetcher."
requires-python = ">=3.11"
dependencies = ["websockets>=16.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
